Fix z-index of the option definition container

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -39,6 +39,7 @@ h3 {
   position: absolute;
   max-width: 450px;
   min-width: 240px;
+  z-index: 1;
 }
 
 .selected {
